test range input iphone

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <h1 class="main-title">Mortgage Calculator</h1>
   <section class="calculator">
     <h2 class="calculator__title">Change values to calculate your results</h2>
+    <div class="calculator__form">
+      <label for="">Years of mortgage</label>
+      <input type="range" min="1" max="40">
+    </div>
   </section>
 
 
