--- a/index.html
+++ b/index.html
@@ -3,15 +3,24 @@
 <head>
   <title>Mortgage Calculator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/range-input-styles.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/calculator.css">
 </head>
 <body>
   <h1 class="main-title">Mortgage Calculator</h1>
   <section class="calculator">
     <h2 class="calculator__title">Change values to calculate your results</h2>
     <div class="calculator__form">
-      <label for="">Years of mortgage</label>
-      <input type="range" min="1" max="40">
+      <label for="years-of-mortgage" class="calculator__years-of-mortgage">Years of mortgage</label>
+      <div class="calculator__input-container">
+        <p class="calculator__minimum-value">1</p>
+        <input class="calculator__range-input" type="range" min="1" max="40" id="years-of-mortgage">
+        <p class="calculator__maximum-value">1</p>
+        <input class="calculator__direct-slider-input" type="number">
+      </div>
     </div>
   </section>
 
