add second slider

--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
     <div class="calculator__form">
       <label for="years-of-mortgage" class="calculator__years-of-mortgage">Years of mortgage</label>
       <div class="calculator__input-container">
-        <p class="calculator__reference-value">1</p>
+        <p class="calculator__reference-value calculator--reference-first">1</p>
         <input class="calculator__range-input" type="range" min="1" max="40" id="years-of-mortgage">
-        <p class="calculator__reference-value">40</p>
+        <p class="calculator__reference-value">40 </p>
+        <input class="calculator__direct-slider-input" type="number">
+      </div>
+
+      <label for="years-of-mortgage" class="calculator__years-of-mortgage">Rate of interest (%)</label>
+      <div class="calculator__input-container">
+        <p class="calculator__reference-value calculator--reference-first">0.1</p>
+        <input class="calculator__range-input" type="range" min="1" max="40" id="years-of-mortgage">
+        <p class="calculator__reference-value">10 </p>
         <input class="calculator__direct-slider-input" type="number">
       </div>
     </div>
