--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Mortgage Calculator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=0"/>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/range-input-styles.css">
   <link rel="stylesheet" href="css/styles.css">
