--- a/index.html
+++ b/index.html
@@ -21,44 +21,47 @@
         <label for="years-of-mortgage" class="calculator__input-label">Years of mortgage</label>
         <div class="calculator__input-container">
           <p class="calculator__reference-value calculator--reference-first">1</p>
-          <input class="calculator__range-input" type="range" min="1" max="40" id="years-of-mortgage">
+          <input class="calculator__range-input" type="range" value="1" step="1" min="1" max="40" id="years-of-mortgage">
           <p class="calculator__reference-value calculator--reference-second">40 </p>
-          <input class="calculator__direct-slider-input" type="number">
+          <input class="calculator__direct-slider-input" value="1" type="number">
         </div>
         <!-- Second slider -->
         <label for="rate-of-interest" class="calculator__input-label">Rate of interest (%)</label>
         <div class="calculator__input-container calculator--increased-bottom-margin">
           <p class="calculator__reference-value calculator--reference-first">0.1</p>
-          <input class="calculator__range-input" type="range" min="1" max="40" id="rate-of-interest">
+          <input class="calculator__range-input" type="range" value="0.1" step="0.1" min="0.1" max="10" id="rate-of-interest">
           <p class="calculator__reference-value calculator--reference-second">10 </p>
-          <input class="calculator__direct-slider-input" type="number">
+          <input class="calculator__direct-slider-input" value="0.1" type="number">
         </div>
         <!-- Loan amount input -->
-        <label for="" class="calculator__input-label">Loan Amount</label>
+        <label for="loan-amount" class="calculator__input-label">Loan Amount</label>
         <div class="calculator__input-with-fixed-text">
-            <input type="number" class="calculator__input-number">
+            <input type="number" class="calculator__input-number" id="loan-amount">
+            <span class="calculator__error-message">Mandatory field</span>
             <span class="calculator__input-number-fixed-text">$</span>
         </div>
         <!-- Annual values -->
         <div class="calculator__row">
           <!-- Annual Tax -->
           <div class="calculator__column">
-              <label for="" class="calculator__input-label">Annual Tax</label>
+              <label for="annual-tax" class="calculator__input-label">Annual Tax</label>
               <div class="calculator__input-with-fixed-text">
-                  <input type="number" class="calculator__input-number">
+                  <input type="number" class="calculator__input-number" id="annual-tax">
+                  <span class="calculator__error-message">Mandatory field</span>
                   <span class="calculator__input-number-fixed-text">$</span>
               </div>
           </div>
           <!-- Annual Insurance -->
           <div class="calculator__column">
-              <label for="" class="calculator__input-label">Annual Insurance</label>
+              <label for="annual-insurance" class="calculator__input-label">Annual Insurance</label>
               <div class="calculator__input-with-fixed-text">
-                  <input type="number" class="calculator__input-number">
+                  <input type="number" class="calculator__input-number" id="annual-insurance">
+                  <span class="calculator__error-message">Mandatory field</span>
                   <span class="calculator__input-number-fixed-text">$</span>
               </div>
           </div>
         </div>
-        <button class="calculator__submit">CALCULATE</button>
+        <button class="calculator__submit" id="submit">CALCULATE</button>
       </div>
     </section>
 
@@ -82,7 +85,7 @@
       <!-- Total monthly payment -->
       <div class="results__row results--text-group results--no-padding">
         <p class="results__category-text results--big-font--only-desktop">Total Monthly Payment</p>
-        <p class="results__category-result results--big-font">$ <span id="total-monthly-payment-result ">841.60</span></p>
+        <p class="results__category-result results--big-font">$ <span id="total-monthly-payment-result">841.60</span></p>
       </div>
     </section>
   </main>
