--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <p class="calculator__reference-value calculator--reference-first">1</p>
           <input class="calculator__range-input" type="range" value="1" step="1" min="1" max="40" id="years-of-mortgage">
           <p class="calculator__reference-value calculator--reference-second">40 </p>
-          <input class="calculator__direct-slider-input" value="1" type="number">
+          <input class="calculator__direct-slider-input" value="1" type="number" disabled>
         </div>
         <!-- Second slider -->
         <label for="rate-of-interest" class="calculator__input-label">Rate of interest (%)</label>
@@ -31,7 +31,7 @@
           <p class="calculator__reference-value calculator--reference-first">0.1</p>
           <input class="calculator__range-input" type="range" value="0.1" step="0.1" min="0.1" max="10" id="rate-of-interest">
           <p class="calculator__reference-value calculator--reference-second">10 </p>
-          <input class="calculator__direct-slider-input" value="0.1" type="number">
+          <input class="calculator__direct-slider-input" value="0.1" type="number" disabled>
         </div>
         <!-- Loan amount input -->
         <label for="loan-amount" class="calculator__input-label">Loan Amount</label>
