--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=0"/>
+  <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/range-input-styles.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/calculator.css">
