Fix design bugs

--- a/index.html
+++ b/index.html
@@ -71,22 +71,22 @@
       <!-- Principle & interest -->
       <div class="results__row results--text-group">
         <p class="results__category-text">Principle & Interest</p>
-        <p class="results__category-result">$ <span id="principle-interest-result">- -</span></p>
+        <p class="results__category-result results--no-calc">$ <span id="principle-interest-result">- -</span></p>
       </div>
       <!-- Tax -->
       <div class="results__row results--text-group">
         <p class="results__category-text">Tax</p>
-        <p class="results__category-result">$ <span id="tax-result">- -</span></p>
+        <p class="results__category-result results--no-calc">$ <span id="tax-result">- -</span></p>
       </div>
       <!-- Insurance -->
       <div class="results__row results--text-group results--border-bottom">
         <p class="results__category-text">Insurance</p>
-        <p class="results__category-result">$ <span id="insurance-result">- -</span></p>
+        <p class="results__category-result results--no-calc">$ <span id="insurance-result">- -</span></p>
       </div>
       <!-- Total monthly payment -->
       <div class="results__row results--text-group results--no-padding">
         <p class="results__category-text results--big-font--only-desktop">Total Monthly Payment</p>
-        <p class="results__category-result results--big-font">$ <span id="total-monthly-payment-result">841.60</span></p>
+        <p class="results__category-result results--no-calc results--big-font">$ <span id="total-monthly-payment-result">- -</span></p>
       </div>
     </section>
   </main>
