Add error message for nubmers

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <label for="loan-amount" class="calculator__input-label">Loan Amount</label>
         <div class="calculator__input-with-fixed-text">
             <input type="number" class="calculator__input-number" id="loan-amount">
-            <span class="calculator__error-message">Mandatory field</span>
+            <span class="calculator__error-message">Mandatory field, it must contain only numbers.</span>
             <span class="calculator__input-number-fixed-text">$</span>
         </div>
         <!-- Annual values -->
@@ -48,7 +48,7 @@
               <label for="annual-tax" class="calculator__input-label">Annual Tax</label>
               <div class="calculator__input-with-fixed-text">
                   <input type="number" class="calculator__input-number" id="annual-tax">
-                  <span class="calculator__error-message">Mandatory field</span>
+                  <span class="calculator__error-message">Mandatory field, it must contain only numbers.</span>
                   <span class="calculator__input-number-fixed-text">$</span>
               </div>
           </div>
@@ -57,7 +57,7 @@
               <label for="annual-insurance" class="calculator__input-label">Annual Insurance</label>
               <div class="calculator__input-with-fixed-text">
                   <input type="number" class="calculator__input-number" id="annual-insurance">
-                  <span class="calculator__error-message">Mandatory field</span>
+                  <span class="calculator__error-message">Mandatory field, it must contain only numbers.</span>
                   <span class="calculator__input-number-fixed-text">$</span>
               </div>
           </div>
