--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <label for="years-of-mortgage" class="calculator__input-label">Years of mortgage</label>
         <div class="calculator__input-container">
           <p class="calculator__reference-value calculator--reference-first">1</p>
-          <input class="calculator__range-input" type="range" value="1" step="1" min="1" max="40" id="years-of-mortgage">
+          <input class="calculator__range-input calculator--edge1314 calculator--ie1011" type="range" value="1" step="1" min="1" max="40" id="years-of-mortgage">
           <p class="calculator__reference-value calculator--reference-second">40 </p>
           <input class="calculator__direct-slider-input" value="1" type="number" disabled>
         </div>
@@ -25,7 +25,7 @@
         <label for="rate-of-interest" class="calculator__input-label">Rate of interest (%)</label>
         <div class="calculator__input-container calculator--increased-bottom-margin">
           <p class="calculator__reference-value calculator--reference-first">0.1</p>
-          <input class="calculator__range-input" type="range" value="0.1" step="0.1" min="0.1" max="10" id="rate-of-interest">
+          <input class="calculator__range-input calculator--edge1314 calculator--ie1011" type="range" value="0.1" step="0.1" min="0.1" max="10" id="rate-of-interest">
           <p class="calculator__reference-value calculator--reference-second">10 </p>
           <input class="calculator__direct-slider-input" value="0.1" type="number" disabled>
         </div>
